fixed spacing according to style guide measurements, linked logo to home page

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,13 +10,16 @@
         min-width: 9.8125rem;
         padding: 2.5rem 0;
         position: relative;
-        top: 10rem;
+        top: 107rem;
+
         @include responsive (tablet) {
             padding: 3.5rem 0 2.5rem 0;
+            top: 60.375rem;
         }
 
         @include responsive (desktop) {
             margin-top: 2rem;
+            top: 53.6875rem
         }
     }
     &__text {
